# rlay-protocol

./: .soliumrc.json  README.md  ethpm.json  ganache_keys.json  ontology_pb2.proto  ontology_playground.js  package-lock.json  package.json  pb_mod.sol  pb_mod_header.sol  seed_ontology_builtins.js  spout.config.toml  truffle.js  web3-rlay.js
.circleci/: config.yml
contracts/: HexTool.sol  IPropositionStorage.sol  OntologyStorage.sol  PropositionLedger.sol  RlayToken.sol  SpreadToken.sol  cid.sol  ontology.proto  ontology_pb2.proto  pb_mod.sol
migrations/: 1_initial_migration.js  2_deploy_contracts.js
rust/: Cargo.toml  build.sh
rust/src/: lib.rs
test/: AnnotationStore.test.js  OntologyStorage.test.js  PropositionLedger.test.js
